--- a/snake.html
+++ b/snake.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <canvas id="game" width="608px" height="608px"></canvas>
-    <script src="scripts/snake.js"></script>
+    <script src="./scripts/snake.js"></script>
 </body>
 </html>
