add decription + rules

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="./snake/snake.css">
 </head>
 <body>
+    <h1 class="description">Управление происходит клавишами
+        Вверх, вниз, влево, вправо.</h1>
+    <h2 class="rules">Правила:
+        Нельзя касаться краев игрового поля, нельзя есть саму змейку.</h2>
     <canvas id="game" width="608px" height="608px"></canvas>
     <script src="./scripts/snake.js"></script>
 </body>
