--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Snake game</title>
-    <link rel="stylesheet" href="./snake/snake.css">
+    <link rel="stylesheet" href="snake/index.css">
 </head>
 <body>
     <h1 class="description">Управление происходит клавишами
